2001-11-26  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 02553]
	* configure: SysV's tr requires '[a-z]' '[A-Z]'

2001-11-26  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02547] "message/*" as a kind of text type
	* file.c (is_text_type): add message/*

2001-11-25  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02535] Name conflicts in configure
	* configure: s/libdir/tlibdir/ for loop variables

2001-11-25  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* display.c: call of init_win32_console_handle is deleted

2001-11-25  Rin Okuyama <okuyama@cna.ne.jp>

	* [w3m-dev 02533] setpgrp bug in configure
	* configure: s/have_setpgrp/def_have_setpgrp/
	   s/setpgrp/def_setpgrp/

2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile (indent): indent
	* run make indent

2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02530]
	* file.c (readHeader): NULL check for domain

2001-11-24  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02529]
	* configure (ask_choice): fix bugs
	* configure (include_opt): disable as much as if baby model
	* configure: ask/def parameter after model selected

	* fm.h (use_mark): runtime option use_mark
	* main.c (_mark): ditto
	* main.c (cmd_mark): ditto
	* main.c (nextMk): ditto
	* main.c (prevMk): ditto
	* main.c (reMk): ditto
	* rc.c (CMT_USE_MARK): ditto
	* rc.c (params3): ditto
	
	* fm.h (nextpage_topline): runtime option nextpage_topline
	* etc.c (lineSkip): ditto
	* main.c (nscroll): ditto
	* rc.c (CMT_NEXTPAGE_TOPLINE): ditto
	* rc.c (params3): ditto
	
	* fm.h (label_topline): runtime option label_topline
	* file.c (loadGeneralFile): ditto
	* main.c (loadLink): ditto
	* rc.c (CMT_LABEL_TOPLINE): ditto
	* rc.c (params3): ditto
	
	* fm.h (vi_prec_num): runtime option vi_prec_num
	* main.c (pgFore): ditto
	* main.c (pgBack): ditto
	* rc.c (CMT_VI_PREC_NUM): ditto
	* rc.c (params3): ditto

	* fm.h (emacs_like_lineedit): runtime option emacs_like_lineedit
	* linein.c (inputLineHist): ditto