@@ -1,8 +1,9 @@
-/* $Id: indep.h,v 1.5 2001/11/21 16:29:46 ukai Exp $ */
+/* $Id: indep.h,v 1.6 2001/11/26 09:01:08 ukai Exp $ */
 #ifndef INDEP_H
 #define INDEP_H
 #include "gc.h"
 #include "Str.h"
+#include "config.h"
 
 #ifndef TRUE
 #define TRUE 1
@@ -23,7 +24,9 @@ extern int strCmp(const void *s1, const void *s2);
 extern char *currentdir(void);
 extern char *cleanupName(char *name);
 extern char *expandPath(char *name);
-extern char *strcasestr(char *s1, char *s2);
+#ifndef HAVE_STRCASESTR
+extern char *strcasestr(const char *s1, const char *s2);
+#endif
 extern int strcasemstr(char *str, char *srch[], char **ret_ptr);
 extern char *remove_space(char *str);
 extern int non_null(char *s);
